--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,16 @@ body {
 	height: 800px;
 }
 
+#audio-player {
+	display: none;
+}
+
 circle.node {
 	fill: #e67e22;
+}
+
+circle.node:hover {
+	fill: #ecf0f1;
 }
 
 line.link {
