--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,25 @@ line.link {
 	height: 10%;
 	z-index: -1000;
 }
+
+.playlist-list {
+	background: #2a2c2b;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.playlist-list li {
+	margin-top: 5px;
+	width: 100%;
+	height: 17px;
+	padding: 20px;
+	font-weight: bold;
+}
+
+.playlist-list li .x-button {
+	color: #ecf0f1;
+	text-decoration: none;
+	float: right;
+	font-size: 1.2em;
+}
