--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,8 @@ line.link {
 	white-space: nowrap;
   	overflow: hidden;
   	text-overflow: ellipsis;
-  	width: 350px;
+  	width: 90%;
+  	float: left;
 }
 
 
