--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
-body {
+html, body {
 	background: #34495e;
 	color: #ecf0f1;
 	font-family: 'Yanone Kaffeesatz', sans-serif;
 	margin: 0;
 	padding: 0;
+	width: 100%;
+	height: 100%;
 }
 
 #app {
@@ -27,8 +29,19 @@ body {
 
 #interactive-pane {
 	width: 80%;
-	float: right;
 	height: 100%;
+	overflow: hidden;
+	margin: 0;
+	padding: 0;
+	display: inline-block;
+	position: fixed;
+	top: 0;
+	right: 0;
+}
+#interactive-pane svg {
+	width: 100%;
+	height: 100%;
+	margin-top: -5px;
 }
 
 #audio-player {
@@ -144,8 +157,11 @@ line.link {
 }
 
 .breadcrumbs {
+	position: fixed;
+	z-index: 15;
 	display: block;
-	float: right;
+	right: 10px;
+	top:10px;
 	margin-top: 10px;
 	margin-right: 10px;
 }
